--- a/Front-end/data.html
+++ b/Front-end/data.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -26,42 +26,40 @@
         </div>
         <nav class="top-nav">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#menu">Central do Assinante</a></li>
             </ul>
         </nav>
     </header>
     <section class="dataset">
-            <form action="#" method="POST" class="formdata">
+            <form  class="formdata">
                 <fieldset>
                     <h1>Preencha seus dados pessoais</h1>
                     <div class="group">
-                        <label>Nome completo</label>
-                        <input type="text" name="nome" placeholder="nome" autofocus>
+                        <label for="nome">Nome completo</label>
+                        <input type="text" name="nome" placeholder="nome" id="nome" required autofocus>
                     </div>
                     <div class="group">
-                        <label>E-mail</label>
-                        <input type="email" placeholder="email">
+                        <label for="email">E-mail</label>
+                        <input type="email" placeholder="email" id="email" required>
                     </div><br>
                     <div class="group">
-                        <label>RG</label>
-                        <input type="text" class="rg" maxlength="10" minlength="7" placeholder="RG">
+                        <label for="rg">RG</label>
+                        <input type="text" id="rg" maxlength="10" minlength="7" placeholder="RG" required>
                     </div>
                     <div class="group">
-                        <label>CPF-Somente números</label>
-                        <input type="text" class="cpf" maxlength="11" minlength="11" placeholder="CPF">
+                        <label for="cpf">CPF-Somente números</label>
+                        <input type="text" id="cpf" maxlength="11" minlength="11" placeholder="CPF" required>
                     </div><br>
                     <div class="group">
-                        <label>Nascimento</label>
-                        <input type="date" class="date">
+                        <label for="date">Data de nascimento</label>
+                        <input type="date" id="date" required>
                     </div>
                     <div class="group">
-                        <label>Telefone com DDD</label>
-                        <input type="tel" class="phone" maxlength="11" minlength="11" placeholder="telefone">
+                        <label for="phone">Telefone com DDD</label>
+                        <input type="tel" id="phone" maxlength="11" minlength="11" placeholder="telefone">
                     </div>
                 </fieldset>
-            </form>
-            <form action="#" method="POST" class="form-adress">
                 <fieldset>
                     <h1>Confira seu endereço e preencha os dados abaixo</h1>
                     <div class="adress group">
@@ -69,28 +67,28 @@
                         <input type="text" placeholder="endereço de instalação" id="adress">
                     </div>
                     <div class="adress group">
-                        <label for="adress">Número</label>
+                        <label for="number">Número</label>
                         <input type="number" placeholder="número" id="number">
                     </div><br>
                     <div class="group">
-                        <label>Complemento</label>
-                        <input type="text" placeholder="complemento">
+                        <label for="complemento">Complemento</label>
+                        <input type="text" placeholder="complemento" id="complemento">
                     </div>
                     <div class="group">
-                        <label>CEP</label>
-                        <input type="text" class="cep" placeholder="CEP">
+                        <label for="cep">CEP</label>
+                        <input type="text" id="cep" placeholder="CEP" required>
                     </div><br>
                     <div class="group">
-                        <label>Estado</label>
-                        <input type="text" placeholder="estado">
+                        <label for="estado">Estado</label>
+                        <input type="text" placeholder="estado" id="estado" required>
                     </div>
                     <div class="group">
-                        <label>Cidade</label>
-                        <input type="text" placeholder="cidade">
+                        <label for="cidade">Cidade</label>
+                        <input type="text" placeholder="cidade" id="cidade" required>
                     </div>
                 </fieldset>
+                <button class="button-submit">Próxima etapa</button>
             </form>
-        <button class="button-submit">Próxima etapa</button>
     </section>
     <script>
         $(document).ready(function () {
