--- a/Front-end/data.html
+++ b/Front-end/data.html
@@ -125,5 +125,6 @@
         </nav>
         <p class="footer-p">Startnet-cnpj: 48.520.165/0003-90</p>
     </footer>
+    <script src="js/data.js" type="module"></script>
 </body>
 </html>
