finished unavailable CEP' Modals

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -7,11 +7,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="./css/style.css" />
 	<link rel="stylesheet" href="./css/modal.css" />
+	<link rel="stylesheet" href="./css/modal2.css">
 	<link rel="stylesheet" href="./css/normalize.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
 		rel="stylesheet" />
 	<link rel="stylesheet" href="icomoon/style.css" />
+	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"
+        integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw=="
+        crossorigin="anonymous"></script>
 	<title>STARTNET</title>
 </head>
 
@@ -36,64 +42,64 @@
 		</div>
 	</section>
 	<section class="middle-content" id="plans">
-			<h2 class="main-title">Escolha o melhor plano para você</h2>
-			<div class="col-1_4">
-				<article >
-					<div class="box">
-						<span class="number">20</span>
-						<span class="mega">mega</span>
-						<span class="p-wifi">Wi-fi grátis</span>
-						<span class="price">
-							<p>R$49,90</p>
-						</span>
-			  <button class="button-sign" data-plano="20">Assine já</button>
-					</div>
-				</article>
-				<article>
-					<div class="box">
-						<span class="number">60</span>
-						<span class="mega">mega</span>
-						<span class="p-wifi">Wi-fi grátis</span>
-						<span class="price">
-							<p>R$69,90</p>
-						</span>
+		<h2 class="main-title">Escolha o melhor plano para você</h2>
+		<div class="col-1_4">
+			<article>
+				<div class="box">
+					<span class="number">20</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$49,90</p>
+					</span>
+					<button class="button-sign" data-plano="20">Assine já</button>
+				</div>
+			</article>
+			<article>
+				<div class="box">
+					<span class="number">60</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$69,90</p>
+					</span>
 					<button class="button-sign" data-plano="60">Assine já</button>
-					</div>
-				</article>
-				<article>
-					<div class="box-middle">
-						<span class="number">100</span>
-						<span class="mega">mega</span>
-						<span class="p-wifi">Wi-fi grátis</span>
-						<span class="price">
-							<p>R$89,90</p>
-						</span>
-			  <button class="button-sign middle" data-plano="100">Assine já</button>
-					</div>
-				</article>
-				<article>
-					<div class="box">
-						<span class="number">150</span>
-						<span class="mega">mega</span>
-						<span class="p-wifi">Wi-fi grátis</span>
-						<span class="price">
-							<p>R$109,90</p>
-						</span>
-			  <button class="button-sign" data-plano="150">Assine já</button>
-					</div>
-				</article>
-				<article>
-					<div class="box">
-						<span class="number">200</span>
-						<span class="mega">mega</span>
-						<span class="p-wifi">Wi-fi grátis</span>
-						<span class="price">
-							<p>R$139,90</p>
-						</span>
-			  <button class="button-sign" data-plano="200">Assine já</button>
-					</div>
-				</article>
-			</div>
+				</div>
+			</article>
+			<article>
+				<div class="box-middle">
+					<span class="number">100</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$89,90</p>
+					</span>
+					<button class="button-sign middle" data-plano="100">Assine já</button>
+				</div>
+			</article>
+			<article>
+				<div class="box">
+					<span class="number">150</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$109,90</p>
+					</span>
+					<button class="button-sign" data-plano="150">Assine já</button>
+				</div>
+			</article>
+			<article>
+				<div class="box">
+					<span class="number">200</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$139,90</p>
+					</span>
+					<button class="button-sign" data-plano="200">Assine já</button>
+				</div>
+			</article>
+		</div>
 	</section>
 	<section class="main-content">
 		<div class="maxwidth">
@@ -128,7 +134,7 @@
 					<div><span class="icon-support_agent"></span></div>
 					<div>
 						<h3 class="main-content-title">Suporte para novos serviços.</h3>
-						<p>Nosso objetivo é a satisfação<br />de todos.</p>
+						<p>Nosso objetivo é a satisfação<br/>de todos.</p>
 					</div>
 				</article>
 			</div>
@@ -165,7 +171,7 @@
 			</div>
 			<div>
 				<article class="content-article col-1_3">
-            		<h3 class=" titles">Valores</h3>
+					<h3 class=" titles">Valores</h3>
 					<div class="container">
 						<i class="far fa-heart icon"></i>
 						<p class="content-p">
@@ -217,5 +223,29 @@
 	</dialog>
 	<script src="./js/modal.js" type="module"></script>
 	<script src="https://kit.fontawesome.com/7c615c2452.js" crossorigin="anonymous"></script>
+
+	<!--MODAL CEP unavailable-->
+	<dialog id="cepUn">
+		<div class="modal-container">
+			<div class="modal-content">
+				<button class="close">x</button>
+				<h3 class="modal-title">Infelizmente, nossos serviços ainda não<br />estão disponíveis na sua região :(</h3>
+				<p class="modal-subtitle">Informe seus dados para que a gente possa te avisar quando nossa<br />cobertura estiver
+					disponível</p>
+				<form method="dialog">
+					<input type="text" id="name" placeholder="Digite seu nome" required autofocus>
+					<input type="email" id="email" placeholder="Digite seu e-mail" required>
+					<input type="tel" id="phone" placeholder="Digite seu número de contato">
+					<button type="submit" class="btnSubmit">Me avise</button>
+				</form>
+			</div>
+		</div>
+	</dialog>
+	<script>
+        $(document).ready(function () {
+            $('#phone').mask('(00) 00000-0000');
+        });
+    </script>
 </body>
+
 </html>
