--- a/Front-end/data.html
+++ b/Front-end/data.html
@@ -42,17 +42,22 @@
                             <input type="text" name="nome" placeholder="nome" id="nome" required autofocus>
                         </div>
                         <div class="group">
+                            <label for="cpf">CPF (Somente números)</label>
+                            <input type="text" id="cpf" maxlength="11" minlength="11" placeholder="CPF" required>
+                        </div>
+                        <div class="group">
                             <label for="email">E-mail</label>
                             <input type="email" placeholder="email" id="email" required>
+                        </div>
+                        <div class="group">
+                            <label for="senha">Senha</label>
+                            <input type="password" placeholder="Digite uma senha" id="senha" required>
                         </div>
                         <div class="group">
                             <label for="rg">RG</label>
                             <input type="text" id="rg" maxlength="10" minlength="7" placeholder="RG" required>
                         </div>
-                        <div class="group">
-                            <label for="cpf">CPF-Somente números</label>
-                            <input type="text" id="cpf" maxlength="11" minlength="11" placeholder="CPF" required>
-                        </div>
+                     
                         <div class="group">
                             <label for="phone">Telefone com DDD</label>
                             <input type="tel" id="phone" maxlength="11" minlength="11" placeholder="telefone">
