refactor back end connection method

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -32,7 +32,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#plans">Planos</a></li>
 				<li><a href="#company-content">A Empresa</a></li>
-				<li><a href="#menu">Central do Assinante</a></li>
+				<li><a href="forms.html">Central do Assinante</a></li>
 			</ul>
 		</nav>
 	</header>
