--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -246,6 +246,7 @@
             $('#phone').mask('(00) 00000-0000');
         });
     </script>
+	<script src="./js/modalCepUn.js" type="module"></script>
 </body>
 
 </html>
