--- a/Front-end/forms.html
+++ b/Front-end/forms.html
@@ -3,16 +3,18 @@
   <script defer src="./js/forms.js"></script>  
   <title>Cadastre-se em StartNet</title>
   <link rel="stylesheet" type="text/css"  href="css/forms.css">
-  <link rel="shortcut icon" href="./assets/logo.png" />	
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
+		rel="stylesheet" />
 
   <body>
     <div id="error"></div>   
     <div class="wrapper">   
-      <form action="Forms-Login">
-        <h3>Crie uma conta para colaborar no Projeto STARTNET </h3>      
-        <img src="./assets/logo-forms.jpg">
+      <form action="Forms-Login">      
+        <a href="./index.html"><img src="./assets/logo.png"></a>
+        <h1>Central de Atendimento</h1>
           <div>
-            <input type="email" class="form" name="email" placeholder="E-mail">
+            <input type="email" class="form field" name="email" placeholder="E-mail">
           </div>
           <div>
             <input type="password" class="form" name="name" placeholder="Senha">
