--- a/Front-end/data.html
+++ b/Front-end/data.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <section class="dataset">
-        <form  class="formdata">
+        <form class="formdata">
             <fieldset>
                 <legend>Preencha seus dados pessoais</legend>
                     <div class="content">
@@ -43,28 +43,28 @@
                         </div>
                         <div class="group">
                             <label for="cpf">CPF (Somente números)</label>
-                            <input type="text" id="cpf" maxlength="11" minlength="11" placeholder="CPF" required>
+                            <input type="text" name="cpf" id="cpf" maxlength="11" minlength="11" placeholder="CPF" required>
                         </div>
                         <div class="group">
                             <label for="email">E-mail</label>
-                            <input type="email" placeholder="email" id="email" required>
+                            <input type="email" placeholder="email" name="email" id="email" required>
                         </div>
                         <div class="group">
                             <label for="senha">Senha</label>
-                            <input type="password" placeholder="Digite uma senha" id="senha" required>
+                            <input type="password" placeholder="Digite uma senha" name="senha" id="senha" required>
                         </div>
                         <div class="group">
                             <label for="rg">RG</label>
-                            <input type="text" id="rg" maxlength="10" minlength="7" placeholder="RG" required>
+                            <input type="text" id="rg" name="rg" maxlength="10" minlength="7" placeholder="RG" required>
                         </div>
                      
                         <div class="group">
                             <label for="phone">Telefone com DDD</label>
-                            <input type="tel" id="phone" maxlength="11" minlength="11" placeholder="telefone">
+                            <input type="tel" id="phone" name="telefone" maxlength="11" minlength="11" placeholder="telefone">
                         </div>
                         <div class="group">
                             <label for="date">Data de nascimento</label>
-                             <input type="date" id="date" required>
+                             <input type="date" id="date" name="dataNascimento" required>
                         </div>
                     </div>
             </fieldset>
@@ -83,8 +83,12 @@
                         <input type="number" placeholder="número" id="number">
                     </div>
                     <div class="group">
-                        <label for="complemento">Complemento</label>
+                        <label for="complemento">Complemento (opcional)</label>
                         <input type="text" placeholder="complemento" id="complemento">
+                    </div>
+                    <div class="group">
+                        <label for="complemento">Bairro</label>
+                        <input type="text" placeholder="Bairro" id="district">
                     </div>
                     <div class="group">
                         <label for="cep">CEP</label>
@@ -100,7 +104,7 @@
                     </div>
                 </div>
             </fieldset>
-            <button class="button-submit">Próxima etapa</button>
+            <button type="submit" class="button-submit">Próxima etapa</button>
         </form>
     </section>
     <script>
