fix modal close button

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -206,7 +206,7 @@
 	<!-- MODAL -->
 	<dialog id="cepDialog">
 		<div class="content">
-			<span class="closeDialog">&times;</span>
+			<button class="close">&times;</button>
 			<p class="title">STARTNET</p>
 			<p>Verifique a disponibilidade em seu endereço</p>
 			<form method="dialog">
@@ -228,7 +228,7 @@
 	<dialog id="cepUn">
 		<div class="modal-container">
 			<div class="modal-content">
-				<button class="close">x</button>
+				<button class="close closeUn">&times;</button>
 				<h3 class="modal-title">Infelizmente, nossos serviços ainda não<br />estão disponíveis na sua região :(</h3>
 				<p class="modal-subtitle">Informe seus dados para que a gente possa te avisar quando nossa<br />cobertura estiver
 					disponível</p>
