--- a/Front-end/agendamento.html
+++ b/Front-end/agendamento.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script defer src="./js/forms.js"></script>  
-  <title>Cadastre-se em StartNet</title>
+  <title>Agendamento</title>
   <link rel="stylesheet" type="text/css"  href="css/agendamento.css">
   <link rel="shortcut icon" href="./assets/logo.png" />	
     <body> 
