--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./css/modal2.css">
 	<link rel="stylesheet" href="./css/normalize.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link rel="shortcut icon" href="./assets/logo.png" />	
 	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
 		rel="stylesheet" />
 	<link rel="stylesheet" href="icomoon/style.css" />
