--- a/Front-end/forms.html
+++ b/Front-end/forms.html
@@ -4,7 +4,8 @@
   <title>Cadastre-se em StartNet</title>
   <link rel="stylesheet" type="text/css"  href="css/forms.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
+  <link rel="shortcut icon" href="./assets/logo.png" />	
+  <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
 		rel="stylesheet" />
 
   <body>
