--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -33,7 +33,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#plans">Planos</a></li>
 				<li><a href="#company-content">A Empresa</a></li>
-				<li><a href="forms.html">Central do Assinante</a></li>
+				<li><a href="login.html">Central do Assinante</a></li>
 			</ul>
 		</nav>
 	</header>
