improve login.css

--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -8,23 +8,22 @@
   rel="stylesheet" />
 
 <body>
-  <div id="error"></div>
-  <div class="wrapper">
-    <a href="./index.html"><img src="./assets/logo.png"></a>
-    <h1>Login</h1>
-    <form id="form" action="Forms-Login">
+  <div id="main-container">
+    <a href="./index.html"><img class="logo" src="./assets/logo.png"></a>
+    <h1>Central do assinante</h1>
+    <form id="login-form" action="forms-login" method="POST">
       <div>
-        <label class="infor">E-mail</label><br>
+        <label for="email" class="infor-label">E-mail</label>
         <input type="email" class="login" name="email" placeholder="e-mail"></input>
       </div>
       <div>
-        <label class="infor">Senha</label><br>
+        <label for="name" class="infor-label">Senha</label>
         <input type="password" class="login" name="name" placeholder="senha"></input>
+        <label id="link-password">
+          <a href="#">Esqueceu a senha?</a>
+        </label>
       </div>
-      <label id="mudar-senha">
-        <a href="#">Esqueceu a senha?</a>
-      </label>
-      <button type="submit" id="acessar" onclick="Acessar()">Acessar</button>
+      <button type="submit" id="access" onclick="Acessar()">Acessar</button>
     </form>
   </div>
 </body>
