--- a/Front-end/data.html
+++ b/Front-end/data.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/menu.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/data.css">
-    <link rel="stylesheet" href="./css/style.css">
+
     <link rel="shortcut icon" href="./assets/logo.png" />	
     <script src="https://kit.fontawesome.com/7c615c2452.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
