--- a/Front-end/formspagamento.html
+++ b/Front-end/formspagamento.html
@@ -24,9 +24,7 @@
       </div>
       <nav class="top-nav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#plans">Planos</a></li>
-          <li><a href="#company-content">A Empresa</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="login.html">Central do Assinante</a></li>
         </ul>
       </nav>
